[package]
name = "link-cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-graphql = "5.0.5"
async-graphql-axum = "5.0.5"
axum = { version = "0.6.2", features = ["headers"] }
tokio = { version = "1.24.1", features = ["full"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.16"
